<resources>
    <string name="app_name">Just Java</string>
    <string name="name_of_client">Enter your name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="order_button">ORDER</string>

    <!-- Translation pharases from order summary -->

    <string name="name_in_order_summary">Name: </string>
    <string name="add_whipped_cream_from_o_s">Add whipped cream? </string>
    <string name="add_chocolate_from_o_s">Add chocolate? </string>
    <string name="quantity_from_o_s">Quantity: </string>
    <string name="sum_from_o_s">Total: $</string>
    <string name="thank_you_from_o_s">Thank you!</string>

    <!-- Toast message -->

    <string name="toast_less_than">You can`t take less than 1 cup of coffee</string>
    <string name="toast_more_than">You can`t take mote than 100 cup of coffee</string>

    <!-- Often strings contain text that should not be translated into other languages. -->
    <!-- Example placeholder for a literal -->
    <!-- <string name="promo_message">
    Please use the "<xliff:g id="promotion_code">ABCDEFG</xliff:g>" to get a discount.
</string>
-->

</resources>
